--- a/static/navbar.css
+++ b/static/navbar.css
@@ -1,151 +1,92 @@
-.navbar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
 
-.navbar li {
-    float: left; /* Alinea los elementos de menú horizontalmente */
-    position: relative; /* Necesario para el dropdown */
-}
-
-.navbar li a, .dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-.navbar li a:hover, .dropdown:hover .dropbtn {
-    background-color: #111;
-}
-
-/* Dropdown container */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    top: 100%; /* Coloca el dropdown justo debajo del botón */
-    left: 0; /* Alinea el dropdown al borde izquierdo del elemento padre */
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1;
-}
-
-/* Mostrar el dropdown al hacer clic */
-.show {
-    display: block;
-}
-
-/* Estilo base para el menú */
-.menu {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    z-index: 1000;
-}
-
-.menu li {
+/* Fondo negro para la barra de navegación */
+.navbar { /* Elemento navbar */
+    background-color: #000000 !important; /* Forzar el fondo negro */
+    width: 610px;
+    height: 20px;
+    justify-content: flex-end; /* Mueve la barra de navegación a la derecha */
+    margin-left: 750px;
     position: relative;
-    display: inline-block;
-    z-index: 1000;
 }
 
-.menu li:hover ul {
-    display: block;
-    z-index: 1000;
+/* Texto amarillo para los enlaces de navegación */
+.navbar-nav .nav-item .nav-link { /* Enlaces dentro del navbar */
+    color: #FFEA99 !important; /* Texto amarillo */
 }
 
-.menu ul {
-    display: none;
-    position: absolute;
-    top: 120%; /* Ajusta la posición vertical del submenú */
-    left: 0;
-    z-index: 1000;
-    padding: 0;
-    margin: 0;
-    list-style: none;
+/* Hover: texto amarillo y fondo negro */
+.navbar-nav .nav-item .nav-link:hover {
+    color: #FFEA99 !important; /* Texto amarillo en hover */
+    background-color: #000 !important; /* Fondo negro en hover */
 }
 
-.menu ul li {
-    margin-bottom: 0; /* Espacio vertical entre elementos del submenú */
+/* Texto amarillo para la marca y otros textos dentro de la navbar */
+.navbar-brand, .navbar-toggler-icon, .navbar .h5, .logo-gladiators h5 { /* Texto dentro del navbar */
+    color: #FFEA99 !important; /* Texto amarillo */
 }
 
-.menu ul li a {
-    display: block;
-    background-color: #342E00FF;
-    color: #FFF07FFF;
-    text-decoration: none;
-    padding: 10px; /* Espaciado interno para los enlaces */
+/* Dropdown Menu */
+.dropdown-menu { /* Menú desplegable dentro del navbar */
+    background-color: #0b0b0b !important; /* Fondo negro */
+    border: none;
 }
 
-/* Estilo para pantallas grandes (computadoras y laptops) */
-@media (min-width: 1024px) {
-
-    .menu li {
-        display: inline-block;
-    }
-
-    .menu ul {
-        top: 160%; /* Ajusta la distancia vertical del submenú */
-    }
+/* Texto amarillo en los elementos del dropdown */
+.dropdown-item { /* Elementos del menú desplegable */
+    color: #FFEA99 !important; /* Texto amarillo */
 }
 
-/* Estilo para pantallas medianas (tablets y laptops pequeñas) */
-@media (max-width: 1024px) and (min-width: 768px) {
-    .menu li {
-        display: inline-block; /* O puedes cambiar a block si quieres un menú vertical */
-    }
-
-    .menu ul {
-        top: 120%; /* Ajusta la distancia vertical del submenú */
-    }
+/* Hover en el dropdown */
+.dropdown-item:hover {
+    color: #FFEA99 !important; /* Texto amarillo en hover */
+    background-color: #000000 !important; /* Fondo negro en hover */
 }
 
-/* Estilo para pantallas pequeñas (celulares) */
-@media (max-width: 768px) {
-    .menu {
-        text-align: center; /* Centra el menú */
-    }
-
-    .menu li {
-        display: block; /* Cambia a bloque para una visualización vertical en móviles */
-    }
-
-    .menu ul {
-        position: static; /* Elimina la posición absoluta para móviles */
-        top: auto; /* Restablece la posición vertical */
-        left: auto; /* Restablece la posición horizontal */
-        width: 100%; /* Ocupa el ancho completo */
-    }
-
-    .menu ul li {
-        margin-bottom: 0; /* Espacio vertical entre elementos del submenú */
-    }
-
-    .menu ul li a {
-        padding: 15px; /* Aumenta el padding para mejorar la usabilidad en pantallas táctiles */
-    }
-
-    .menu li:hover ul {
-        display: block; /* Asegúrate de que el submenú se muestre en móviles */
-    }
+.navbar-toggler { /* Botón de toggle para dispositivos móviles */
+    border-color: yellow; /* Cambia el color del borde del botón */
 }
+
+.navbar-toggler-icon { /* Icono del botón de toggle */
+    background-image: url('../static/assets/font/menu.svg');
+}
+
+.navbar-toggler:focus, .navbar-toggler:hover {
+    background-color: #000; /* Fondo negro */
+}
+
+.logo-gladiators h5 {
+    left: -1200px;
+    position: relative;
+    /* margin-right: 200px; */
+}
+.product-image {
+    max-width: 100px;
+    max-height: 100px;
+        }
+.logo-gladiators {
+    display: flex;
+    align-items: center;
+    margin-left: 2%;
+    position: relative;
+    top: 10px; 
+}
+
+.logo-gladiators img {
+    max-width: 50px;
+}
+
+.logo-gladiators h5 {
+    margin-right: 5%; /* Ajusta este valor para el espacio entre la imagen y el texto */
+}
+
+.navbar {
+    height: 0px !important; /* Forzar altura */
+    padding: 0 !important; /* Forzar padding */
+}
+
+    .navbar-expand-lg .navbar-collapse {
+        margin-left: 30%;
+    }
 
 
 
