--- a/static/editar.css
+++ b/static/editar.css
@@ -89,10 +89,27 @@ h1{
     background-color: #000; /* Fondo negro */
 }
 
+/* Cambiar el color del boton */
+.swal2-confirm-custom {
+    color: #494646; 
 
+}
 
-
-
+.boton-reg{
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: 700;
+    color: #342E00FF;
+    background: #FFF07FFF;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    grid-column: span 3; 
+    justify-self: center; 
+    margin-top: 20px;
+    width: 150px;
+    height: 50px;
+}
 
 
 
