--- a/templates/editarUsuario.html
+++ b/templates/editarUsuario.html
@@ -10,25 +10,32 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="../static/navbar.css">
+
+
 </head>
-    <section class="incons-container">
-        <!-- Aqui van  los iconos de las redes sociales, eslogan, correo y horarios -->
-        <div class="incons">
-            <a href="/"><span class="flaticon-001-facebook"></span></a>
-            <a href="/"><span class="flaticon-003-whatsapp"></span></a>
-            <a href="/"><span class="flaticon-011-instagram"></span></a>
-        </div>
-        <div class="inf-p">
-            <p>Más que una tienda, un universo de posibilidades...</p>
-        </div>
-        <div class="correo-a">
-            <a href="Gladiators99zxc@gmail.com">Gladiators99zxc@gmail.com</a>
-        </div>
-        <div class="inf-p">
-            <p>Lun-Vie 10:00a.m--8:00p.m
-            Sab-Dom 9:00a.m--9:00p.m</p>
-        </div>
-    </section>
+<body>
+    <header>
+        <section class="incons-container">
+            <div class="incons">
+                <a href="/"><span class="flaticon-001-facebook" aria-label="Facebook"></span></a>
+                <a href="/"><span class="flaticon-003-whatsapp" aria-label="WhatsApp"></span></a>
+                <a href="/"><span class="flaticon-011-instagram" aria-label="Instagram"></span></a>
+            </div>
+            <div class="inf-p">
+                <p>Más que una tienda, un universo de posibilidades...</p>
+            </div>
+            <div class="correo-a">
+                <a href="mailto:Gladiators99zxc@gmail.com">Gladiators99zxc@gmail.com</a>
+            </div>
+            <div class="inf-p">
+                <p>Lun-Vie 10:00a.m--8:00p.m<br>Sab-Dom 9:00a.m--9:00p.m</p>
+            </div>
+        </section>
         <nav>
             <section class="logo-gladiators">
                 <a href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='assets/img/Logotipo_GladiatorsTransparente.png') }}" alt="Logotipo Gladiator's"></a>
@@ -42,15 +49,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/index.html">Inicio</a>
+                        <a class="nav-link" href="{{ url_for('secciones') }}">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="ventasDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Ventas
                         </a>
                         <div class="dropdown-menu" aria-labelledby="ventasDropdown">
-                        <a class="dropdown-item" href="registrar_venta">Registrar</a>
-                        <a class="dropdown-item" href="#">Consultar</a>
+                            <a class="dropdown-item" href="{{ url_for('registrar_venta') }}">Registrar</a>
+                            <a class="dropdown-item" href="{{ url_for('reporte_diario') }}">Reporte Diario</a>
+                            <a class="dropdown-item" href="{{ url_for('reporte_semanal') }}">Reporte Semanal</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -58,8 +66,8 @@
                         Productos
                         </a>
                         <div class="dropdown-menu" aria-labelledby="productosDropdown">
-                        <a class="dropdown-item" href="productos">Registrar</a>
-                        <a class="dropdown-item" href="consultar_productos">Consultar</a>
+                            <a class="dropdown-item" href="{{ url_for('productos') }}">Registrar</a>
+                            <a class="dropdown-item" href="{{ url_for('consultar_productos') }}">Consultar</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -67,15 +75,15 @@
                         Usuarios
                         </a>
                         <div class="dropdown-menu" aria-labelledby="usuariosDropdown">
-                        <a class="dropdown-item" href="registrar_usuario">Registrar</a>
-                        <a class="dropdown-item" href="consultar_usuarios">Consultar</a>
+                            <a class="dropdown-item" href="{{ url_for('registrar_usuario') }}">Registrar</a>
+                            <a class="dropdown-item" href="{{ url_for('consultar_usuarios') }}">Consultar</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/index.html">Soporte</a>
+                        <a class="nav-link" href="{{ url_for('index') }}">Soporte</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/index.html">Cerrar Sesión</a>
+                        <a class="nav-link" href="{{ url_for('index') }}">Cerrar Sesión</a>
                     </li>
                     </ul>
                 </div>
@@ -83,17 +91,17 @@
             </nav>
         </nav>
     </header>
-</header>
 <body>
     <div class="container-fluid">
     <h2>Edición de nombre del usuario</h2>
     <hr class="line">
     <br>
     <form id="myform" action="{{ url_for('update_usuario_post', id_usuario=datos[0]) }}" method="POST" enctype="multipart/form-data">
-        <section class="label">
+        <section class="foto">
             <label for="imagen">Imagen:</label>
-            <input type="file" id="imagen" name="imagen">
-            <img src="{{ url_for('static', filename=datos[12]) }}" alt="Imagen actual" style="max-width: 200px;">
+            <input type="file" id="imagen" name="imagen" required>
+            <img id="preview" class="preview-img" src="#" alt="Vista previa de la imagen" style="display: none;">
+        </div>
             <br><br>
         </section>
         <section class="label">
@@ -139,48 +147,65 @@
             <label for="contraseña">Contraseña:</label>
             <input type="password" id="contraseña" name="contraseña" value="{{ datos[10] }}" required>
         </section>
-        <button type="button" type="submit" class="btn btn-primary mt-3 " onclick="Swal.fire({
+        <button type="button" type="submit" class="boton-reg" onclick="Swal.fire({
                     title: '¿Estás seguro de querer realizar este cambio?',
                     text: '¡No podrás revertir esto!',
                     icon: 'warning',
                     showCancelButton: true,
-                    confirmButtonColor: '#FFF07FFF',
+                    confirmButtonColor: '#FFF07F',
                     cancelButtonColor: '#d33',
-                    confirmButtonText: '¡Sí, realizar cambio!'
-                    }).then((result) => {
-                    if (result.isConfirmed) {
-                    Swal.fire({
-                    title: '¡Cambio realizado!',
-                    text: 'El cambio ha sido efectuado con éxito.',
-                    icon: 'success'
-                    }).then(() => {
-                    document.getElementById('myform').submit();
-                    });
+                    confirmButtonText: '¡Sí, realizar cambio',
+                    customClass: {
+                        confirmButton: 'swal2-confirm-custom'  // Clase personalizada para el botón de confirmación
                     }
-                    })">Actualizar</button>
-        </form>
-        </form>    
-        <form id="formdel" action="{{ url_for('delete_usuario', id_usuario=datos[0]) }}" method="POST" style="display:inline;">
-            <button type="button" class="btn-eliminar" onclick="Swal.fire({
-                title: '¿Estás seguro de querer realizar este cambio?',
-                text: '¡No podrás revertir esto!',
-                icon: 'warning',
-                showCancelButton: true,
-                confirmButtonColor: '#FFF07FFF',
-                cancelButtonColor: '#d33',
-                confirmButtonText: '¡Sí, realizar cambio!'
                 }).then((result) => {
-                if (result.isConfirmed) {
-                Swal.fire({
+                    if (result.isConfirmed) {
+                        Swal.fire({
+                            title: '¡Cambio realizado!',
+                            text: 'El cambio ha sido realizado con éxito.',
+                            icon: 'success'
+                        }).then(() => {
+                            document.getElementById('myform').submit();
+                        });
+                    }
+})">Actualizar</button>
+        </form>
+        </form>
+        <form id="formdel" action="{{ url_for('delete_usuario', id_usuario=datos[0]) }}" method="POST" style="display:inline;" class="delete">
+    <button type="button" style="padding: 10px 20px; font-size: 18px; font-weight: 700; color: rgb(220, 220, 220); background: rgb(164, 0, 0); border: none; border-radius: 8px; cursor: pointer; grid-column: span 3; justify-self: center; margin-top: 20px; width: 150px; height: 50px;" class="boton-eliminar" onclick="Swal.fire({
+        title: '¿Estás seguro de querer realizar este cambio?',
+        text: '¡No podrás revertir esto!',
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#FFF07FFF',
+        cancelButtonColor: '#d33',
+        confirmButtonText: '¡Sí, realizar cambio!',
+        customClass: {
+            confirmButton: 'custom-confirm-button'
+        }
+    }).then((result) => {
+        if (result.isConfirmed) {
+            Swal.fire({
                 title: '¡Cambio realizado!',
                 text: 'El cambio ha sido efectuado con éxito.',
                 icon: 'success'
-                }).then(() => {
+            }).then(() => {
                 document.getElementById('formdel').submit();
-                });
-                }
-                })">Eliminar</button>
-        </form>
+            });
+        }
+    })">Eliminar</button>
+</form>
+
     </div>
+    <script>
+    document.getElementById('imagen').onchange = function (event) {
+        const [file] = event.target.files;
+        if (file) {
+            const preview = document.getElementById('preview');
+            preview.src = URL.createObjectURL(file);
+            preview.style.display = 'block';
+        }
+    };
+</script>
 </body>
 </html>
