--- a/static/navbar.css
+++ b/static/navbar.css
@@ -118,6 +118,15 @@
     }
 }
 
+.navbar {
+    background-color: #000000;
+    width: 1000px;
+    height: 20px;
+    justify-content: flex-end;
+    margin-left: 655px;
+    position:relative;
+}
+
 /* Amarillo Pastel: #FFFFCC
 Amarillo Normal: #FFD700
 Mostaza: #D4AF37
