--- a/static/regVenta.css
+++ b/static/regVenta.css
@@ -347,9 +347,10 @@ input[type=number] {
     box-shadow: 0px 0px 1px #171a1f, 0px 0px 2px #171a1f;
 }
 
+
 /* Contenedor de previsualización */
 .pre-visualizacion {
-    width: 30%; /* Ocupa el 30% del contenedor principal */
+    width: 40%; /* Ocupa el 30% del contenedor principal */
     height: auto;
     box-sizing: border-box;
     padding: 20px;
@@ -406,14 +407,14 @@ input[type=number] {
 
 /* Contenedor de la tabla */
 .contenedor-tabla {
-    width: 70%; /* Ajusta el tamaño según sea necesario */
+    width: 70%; 
     padding: 20px;
 }
 
 /* Contenedor de pre-visualización */
 .pre-visualizacion {
-    width: 25%; /* Ajusta el tamaño según sea necesario */
-    padding: 20px;
+    width: 100%; 
+    padding: 25px;
     box-shadow: 0px 0px 1px #171a1f, 0px 0px 2px #171a1f;
 }
 
@@ -662,6 +663,40 @@ table {
     }
 }
 
+/* CAMBIO DE FONDO */
+/* Estilo para el modo claro */
+body {
+    background-color: white;
+    color: black;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+/* Estilo para el modo oscuro */
+body.dark-mode {
+    background-color: #121212;
+    color: white;
+}
+
+/* Estilo para el botón de modo oscuro */
+.toggle-dark-mode {
+    cursor: pointer;
+    font-size: 28px;
+    position:absolute;
+    top: 100px;
+    right: 20px;
+    color: #FFEA99; /* Amarillo como en otros elementos */
+}
+
+/* Estilo para el ícono en modo oscuro */
+body.dark-mode .toggle-dark-mode {
+    color: #FFEA99; /* Cambia el color del ícono en modo oscuro si lo deseas */
+}
+
+.toggle-dark-mode i{
+    padding-right:20px;
+    margin-bottom: 0px;
+}
+
 /* Amarillo Pastel: #FFFFCC
 Amarillo Normal: #FFD700
 Mostaza: #D4AF37
@@ -673,3 +708,4 @@ Amarillo Ámbar: #FFBF00
 Amarillo Dorado Oscuro: #B8860B
 Amarillo Maíz: #FBEC5D */
 
+/* Contenedor de pre-visualización */
