--- a/static/seccion.css
+++ b/static/seccion.css
@@ -186,15 +186,14 @@ h1 {
 /* Asegurar que toda la barra de navegación tenga fondo negro */
 
 /* Fondo negro para la barra de navegación */
-.navbar {
-    background-color: #000000!important; /* Forzar el fondo negro */
-    width: 610PX;
-    height: 20PX;
-    justify-content: flex-end; /* Mueve la barra de navegación a la derecha */
-    margin-left: 750PX;
-    position: relative;
-}
-
+/* .navbar {
+    background-color: #000000;
+    width: 1000px;
+    height: 20px;
+    justify-content: flex-end;
+    margin-left: 655px;
+    position:relative;
+} */
 /* Texto amarillo para los enlaces de navegación */
 .navbar-nav .nav-item .nav-link {
     color: #FFEA99 !important; /* Texto amarillo */
@@ -202,7 +201,7 @@ h1 {
 
 /* Hover: texto amarillo y fondo negro */
 .navbar-nav .nav-item .nav-link:hover {
-    color: #FFEA99 !important; /* Texto amarillo en hover */
+    color: #f9f9f7 !important; /* Texto amarillo en hover */
     background-color: #000 !important; /* Fondo negro en hover */
 }
 
@@ -224,7 +223,7 @@ h1 {
 
 /* Hover en el dropdown */
 .dropdown-item:hover {
-    color: #FFEA99 !important; /* Texto amarillo en hover */
+    color: #f7f7f6 !important; /* Texto amarillo en hover */
     background-color: #000000 !important; /* Fondo negro en hover */
 }
 
@@ -240,10 +239,39 @@ h1 {
     background-color: #000; /* Fondo negro */
 }
 
+/* CAMBIO DE FONDO */
+/* Estilo para el modo claro */
+body {
+    background-color: white;
+    color: black;
+    transition: background-color 0.3s, color 0.3s;
+}
 
+/* Estilo para el modo oscuro */
+body.dark-mode {
+    background-color: #121212;
+    color: white;
+}
 
+/* Estilo para el botón de modo oscuro */
+.toggle-dark-mode {
+    cursor: pointer;
+    font-size: 28px;
+    position:absolute;
+    top: 100px;
+    right: 20px;
+    color: #FFEA99; /* Amarillo como en otros elementos */
+}
 
+/* Estilo para el ícono en modo oscuro */
+body.dark-mode .toggle-dark-mode {
+    color: #FFEA99; /* Cambia el color del ícono en modo oscuro si lo deseas */
+}
 
+.toggle-dark-mode i{
+    padding-right:20px;
+    margin-bottom: 0px;
+}
 /* Los dos contenedores principales responsivos */
 
 
