--- a/static/navbar.css
+++ b/static/navbar.css
@@ -127,6 +127,146 @@
     position:relative;
 }
 
+/* Fondo negro para la barra de navegación */
+.navbar { /* Elemento navbar */
+    background-color: #000000 !important; /* Forzar el fondo negro */
+    width: 610px;
+    height: 20px;
+    justify-content: flex-end; /* Mueve la barra de navegación a la derecha */
+    margin-left: 750px;
+    position: relative;
+}
+
+/* Texto amarillo para los enlaces de navegación */
+.navbar-nav .nav-item .nav-link { /* Enlaces dentro del navbar */
+    color: #FFEA99 !important; /* Texto amarillo */
+}
+
+.nav-link {
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+.nav-link:hover {
+    color: #ff6f61; /* Cambia a un color deseado */
+    background-color: #f0f0f0; /* Cambia el fondo del enlace */
+}
+
+/* Hover: texto amarillo y fondo negro */
+.navbar-nav .nav-item .nav-link:hover {
+    color: #fcfbf9 !important; /* Texto amarillo en hover */
+    background-color: #000 !important; /* Fondo negro en hover */
+}
+
+/* Texto amarillo para la marca y otros textos dentro de la navbar */
+.navbar-brand, .navbar-toggler-icon, .navbar .h5, .logo-gladiators h5 { /* Texto dentro del navbar */
+    color: #FFEA99 !important; /* Texto amarillo */
+}
+
+/* Dropdown Menu */
+.dropdown-menu { /* Menú desplegable dentro del navbar */
+    background-color: #0b0b0b !important; /* Fondo negro */
+    border: none;
+}
+
+/* Texto amarillo en los elementos del dropdown */
+.dropdown-item { /* Elementos del menú desplegable */
+    color: #FFEA99 !important; /* Texto amarillo */
+}
+
+/* Hover en el dropdown */
+.dropdown-item:hover {
+    color: #fcfcfc !important; /* Texto amarillo en hover */
+    background-color: #000000 !important; /* Fondo negro en hover */
+}
+
+.navbar-toggler { /* Botón de toggle para dispositivos móviles */
+    border-color: yellow; /* Cambia el color del borde del botón */
+}
+
+.navbar-toggler-icon { /* Icono del botón de toggle */
+    background-image: url('../static/assets/font/menu.svg');
+}
+
+.navbar-toggler:focus, .navbar-toggler:hover {
+    background-color: #000; /* Fondo negro */
+    opacity: 0.7;
+}
+
+.logo-gladiators h5 {
+    left: -1150px;
+    position: relative;
+    top: 5px;
+    /* margin-right: 200px; */
+}
+.product-image {
+    max-width: 100px;
+    max-height: 100px;
+        }
+.logo-gladiators {
+    display: flex;
+    align-items: center;
+    margin-left: 2%;
+    position: relative;
+    top: 10px; 
+}
+
+.logo-gladiators img {
+    max-width: 50px;
+}
+
+.logo-gladiators h5 {
+    margin-right: 5%; /* Ajusta este valor para el espacio entre la imagen y el texto */
+}
+
+.navbar {
+    height: 0px !important; /* Forzar altura */
+    padding: 0 !important; /* Forzar padding */
+}
+
+    .navbar-expand-lg .navbar-collapse {
+        margin-left: 30%;
+    }
+
+
+
+
+
+
+
+
+
+/* Los dos contenedores principales responsivos */
+@media (max-width: 800px) {
+    .container {
+        flex-direction: column; /* Cambia a columna en pantallas más pequeñas */
+        align-items: center; /* Centra los elementos */
+    }
+    .principal-container, .pre-visualizacion {
+        width: 100%; /* Ajusta el ancho al 100% en pantallas pequeñas */
+    }
+    .pre-visualizacion {
+        margin-top: 20px; /* Añade un margen superior para separar los elementos */
+    }
+}
+
+@media (max-width: 768px) {
+    .pre-visualizacion {
+        width: 100%; /* Ajusta el ancho al 100% en pantallas pequeñas */
+        max-width: 305px; /* Límite máximo de ancho para mantener el diseño */
+        margin: 0 auto; /* Centra horizontalmente en pantallas pequeñas */
+    }
+}
+
+.navbar {
+    background-color: #000000;
+    width: 1000px;
+    height: 20px;
+    justify-content: flex-end;
+    margin-left: 530px;
+    position:relative;
+    top: -8px;
+}
+
 /* Amarillo Pastel: #FFFFCC
 Amarillo Normal: #FFD700
 Mostaza: #D4AF37
@@ -138,3 +278,51 @@ Amarillo Ámbar: #FFBF00
 Amarillo Dorado Oscuro: #B8860B
 Amarillo Maíz: #FBEC5D */
 
+.nav-link {
+    transition: transform 0.4s ease-in-out;
+}
+
+.nav-link:hover {
+    transform: scale(1.2); /* Aumenta el tamaño del enlace */
+}
+
+/* CAMBIO DE FONDO */
+/* Estilo para el modo claro */
+body {
+    background-color: white;
+    color: black;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+/* Estilo para el modo oscuro */
+body.dark-mode {
+    background-color: #121212;
+    color: white;
+}
+
+/* Estilo para el botón de modo oscuro */
+.toggle-dark-mode {
+    cursor: pointer;
+    font-size: 28px;
+    position:absolute;
+    top: 94px;
+    right: 20px;
+    color: #FFEA99; /* Amarillo como en otros elementos */
+}
+
+/* Estilo para el ícono en modo oscuro */
+body.dark-mode .toggle-dark-mode {
+    color: #FFEA99; /* Cambia el color del ícono en modo oscuro si lo deseas */
+}
+
+.toggle-dark-mode i{
+    padding-right:20px;
+    margin-bottom: 0px;
+    top:20px;
+}
+/* Los dos contenedores principales responsivos */
+
+.toggle-dark-mode:hover {
+    transform: scale(1.3); /* Aumenta el tamaño del ícono */
+    color: #ffd700; /* Cambia a un tono más brillante de amarillo */
+}
