--- a/templates/secciones.html
+++ b/templates/secciones.html
@@ -14,6 +14,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link rel="stylesheet" href="../static/navbar.css">
 <style>
     .logo-gladiators {
     display: flex;
@@ -83,8 +84,8 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="ventasDropdown">
                             <a class="dropdown-item" href="{{ url_for('registrar_venta') }}">Registrar</a>
-                            <a class="dropdown-item" href="{{ url_for('reporte_diario') }}">Reporte Diario</a>
-                            <a class="dropdown-item" href="{{ url_for('reporte_semanal') }}">Reporte Semanal</a>
+                            <!-- <a class="dropdown-item" href="{{ url_for('reporte_diario') }}">Reporte Diario</a>
+                            <a class="dropdown-item" href="{{ url_for('reporte_semanal') }}">Reporte Semanal</a> -->
                         </div>
                     </li>
                     <li class="nav-item dropdown">
