--- a/templates/regVenta.html
+++ b/templates/regVenta.html
@@ -64,7 +64,12 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="../static/navbar.css">
-
+<style>
+    .toggle-dark-mode i{
+        position: relative;
+        top: -40px;
+    }
+</style>
 
 </head>
 <body>
