--- a/templates/editarProduct.html
+++ b/templates/editarProduct.html
@@ -12,6 +12,10 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="../static/navbar.css">
 
 
@@ -136,7 +140,8 @@
             <!-- Mostrar la imagen actual -->
             <img src="{{ url_for('static', filename=datos[8]) }}" alt="Imagen actual" style="max-width: 200px;">
         </section>
-        <button type="submit">Actualizar</button>
+        <!-- <button type="submit">Actualizar</button> -->
+
     </form>
 </div>
 <script>
@@ -146,3 +151,55 @@
         </script>
 </body>
 </html>
+
+<div style="display: flex; gap: 10px; justify-content: center; position:relative; top: -10px;">
+            <form id="myform" method="POST" style="display:inline;">
+                <button type="button" style="position: relative;top: -20px;" class="boton-reg" onclick="Swal.fire({
+                    title: '¿Estás seguro de querer realizar este cambio?',
+                    text: '¡No podrás revertir esto!',
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#FFF07F',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: '¡Sí, realizar cambio!',
+                    customClass: {
+                        confirmButton: 'swal2-confirm-custom'
+                    }
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        Swal.fire({
+                            title: '¡Cambio realizado!',
+                            text: 'El cambio ha sido realizado con éxito.',
+                            icon: 'success'
+                        }).then(() => {
+                            document.getElementById('myform').submit();
+                        });
+                    }
+                })">Actualizar</button>
+            </form>
+        
+            <form id="formdel" action="{{ url_for('delete_producto', id_producto=datos[0]) }}" method="POST" style="display:inline;">
+                <button type="button" style="padding: 10px 20px; font-size: 18px; font-weight: 700; color: rgb(220, 220, 220); background: rgb(164, 0, 0); border: none; border-radius: 8px; cursor: pointer; width: 150px; height: 50px;" class="boton-eliminar" onclick="Swal.fire({
+                    title: '¿Estás seguro de querer realizar este cambio?',
+                    text: '¡No podrás revertir esto!',
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#FFF07FFF',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: '¡Sí, realizar cambio!',
+                    customClass: {
+                        confirmButton: 'custom-confirm-button'
+                    }
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        Swal.fire({
+                            title: '¡Cambio realizado!',
+                            text: 'El cambio ha sido efectuado con éxito.',
+                            icon: 'success'
+                        }).then(() => {
+                            document.getElementById('formdel').submit();
+                        });
+                    }
+                })">Eliminar</button>
+            </form>
+        </div>
